[package]
name = "node-cpal"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
cpal = "0.15.2"
uuid = { version = "1.6", features = ["v4"] }
parking_lot = "0.12"
lazy_static = "1.4"
crossbeam-channel = "0.5"
once_cell = "1.19.0"

[profile.release]
lto = true
